# Arxiv-Rag

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/agent_infrastructure/agents/: document_retriver.py  main_agent.py
app/agent_infrastructure/evaluation/: deepeval.py
app/agent_infrastructure/guardrails/: guardrails.py  guardrails_models.py
app/agent_infrastructure/infrastructure/: embeddings.py  llm_clients.py
app/agent_infrastructure/prompt_templates/: templates.py
app/agent_infrastructure/tools/: document_retriver.py
app/agent_infrastrure/: __init__.py
app/agent_infrastrure/agents/: document_retriver.py  main_agent.py
app/agent_infrastrure/infrastructure/: embeddings.py  llm_clients.py
app/agent_infrastrure/prompt_templates/: __init__.py  templates.py
app/core/: config.py  security.py
app/db/: client.py
app/evaluation/: deep_eval_runner.py
app/schema/: langgraph_agent_states.py  langgraph_tools_state.py
model_hosting/gemma_model/: Dockerfile  README.md  requirements.txt  server.py
model_hosting/guardrails_models/: Dockerfile  README.md  model_loading.py  onnx_conversion.py  requirements.txt  run_all.sh
